[package]
license = "CC0-1.0"
name = "bump_alloc"
version = "0.1.0"
authors = ["Neil Henning <sheredom@gmail.com>"]
edition = "2024"
description = "global_allocator implementation of a bump allocator"
repository = "https://github.com/sheredom/bump_alloc"
readme = "README.md"
keywords = ["bump", "allocator", "GlobalAlloc", "global_allocator"]

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2.46"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["minwindef", "winnt"] }
kernel32-sys = "0.2.1"


[dev-dependencies]
env_logger = "0.11"
rand = "0.9"
