[package]
license = "CC0-1.0"
name = "bump_alloc"
version = "0.1.0"
authors = [
    "Neil Henning <sheredom@gmail.com>",
    "Robert Masen <r.f.masen@gmail.com>"
]
edition = "2024"
description = "An implementation of a bump allocator using mmap"
repository = "https://github.com/FreeMasen/bump_alloc"
readme = "README.md"
keywords = [
    "bump", "allocator", "GlobalAlloc", 
    "global_allocator", "Allocator"
]
categories = [
    "memory-management"
]

[dependencies]
allocator-api2 = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2.46"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["minwindef", "winnt"] }
kernel32-sys = "0.2.2"

[features]
default = [ "std" ]
alloc = [ "allocator-api2/alloc" ]
std = [ "alloc", "allocator-api2/std" ]
nightly = []
